:evergreen_tree: Update

--- a/StackApp/Stack.xcodeproj/xcshareddata/xcschemes/StackDemoApp.xcscheme
+++ b/StackApp/Stack.xcodeproj/xcshareddata/xcschemes/StackDemoApp.xcscheme
@@ -20,6 +20,48 @@
                ReferencedContainer = "container:Stack.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "StackTests"
+               BuildableName = "StackTests"
+               BlueprintName = "StackTests"
+               ReferencedContainer = "container:..">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "4B2A924728E4B6FA006624AD"
+               BuildableName = "StackDemoAppTests.xctest"
+               BlueprintName = "StackDemoAppTests"
+               ReferencedContainer = "container:Stack.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "4B2A925128E4B6FA006624AD"
+               BuildableName = "StackDemoAppUITests.xctest"
+               BlueprintName = "StackDemoAppUITests"
+               ReferencedContainer = "container:Stack.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
