--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -8,12 +8,30 @@ on:
 
 jobs:
   build:
-    runs-on: macos-12
-    
+    runs-on: macos-13
+
     steps:
       - uses: maxim-lobanov/setup-xcode@v1.1
         with:
-          xcode-version: "14.0"
+          xcode-version: "14.3"
       - uses: actions/checkout@v2
       - name: xcodebuild
         run: xcodebuild -scheme Stack -sdk iphoneos -destination 'generic/platform=iOS'
+
+  test:
+    runs-on: macos-13
+
+    steps:
+      - uses: maxim-lobanov/setup-xcode@v1.1
+        with:
+          xcode-version: "14.3"
+      - uses: actions/checkout@v2
+
+      - name: Test
+        run: xcodebuild -scheme StackTests -resultBundlePath results/StackTests.xcresult test -destination 'platform=iOS Simulator,name=iPhone 14 Pro,OS=16.4' -derivedDataPath ./DerivedData | xcpretty
+
+      - uses: kishikawakatsumi/xcresulttool@v1
+        with:
+          path: |
+            results/StackTests.xcresult
+        if: success() || failure()
