--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -8,17 +8,17 @@ on:
 
 jobs:
   deploy:
-    runs-on: macos-12
+    runs-on: macos-13
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
       - uses: maxim-lobanov/setup-xcode@v1.1
         with:
-          xcode-version: "14.0"
+          xcode-version: "14.3"
       - uses: actions/checkout@v2
         with:
           submodules: true  # Fetch Hugo themes (true OR recursive)
-          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+          fetch-depth: 1
       - name: Build
         run: xcodebuild docbuild -scheme Stack -derivedDataPath .build -destination 'generic/platform=iOS'
       - name: Generate
