--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -20,7 +20,7 @@ jobs:
           submodules: true  # Fetch Hugo themes (true OR recursive)
           fetch-depth: 1
       - name: Build
-        run: xcodebuild docbuild -scheme Stack -derivedDataPath .build -destination 'generic/platform=iOS'
+        run: xcodebuild docbuild -scheme SwiftUIStack -derivedDataPath .build -destination 'generic/platform=iOS'
       - name: Generate
         run: |
           $(xcrun --find docc) process-archive \
