--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -28,10 +28,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Test
-        run: xcodebuild -scheme StackTests -resultBundlePath results/StackTests.xcresult test -destination 'platform=iOS Simulator,name=iPhone 14 Pro,OS=16.4' | xcpretty
+        run: xcodebuild -scheme SwiftUIStackTests -resultBundlePath results/SwiftUIStackTests.xcresult test -destination 'platform=iOS Simulator,name=iPhone 14 Pro,OS=16.4' | xcpretty
 
       - uses: kishikawakatsumi/xcresulttool@v1
         with:
           path: |
-            results/StackTests.xcresult
+            results/SwiftUIStackTests.xcresult
         if: success() || failure()
